rename: QKSPARK → 智编编辑助手

--- a/taskpane.html
+++ b/taskpane.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>QKSPARK</title>
+  <title>智编编辑助手</title>
   <script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js"></script>
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -18,7 +18,7 @@
   </style>
 </head>
 <body>
-  <h1>🔥 QKSPARK 智能编辑助手</h1>
+  <h1>✍️ 智编编辑助手</h1>
   <div id="status" class="status">初始化中...</div>
   <button class="btn" id="btnCheck" disabled>术语一致性检查</button>
   <button class="btn" id="btnPolish" disabled>学术润色</button>
